--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Corrects bad casing and invalid repeating character errors on the incoming word and then returns the corrected word.",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "npm run test:jest --",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+    "test:jest": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -22,6 +26,25 @@
     "npm": ">=15.0.1"
   },
   "dependencies": {
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
     "typescript": "4.0.5"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint": "^7.12.1",
+    "husky": "^4.3.0",
+    "jest": "^26.6.1",
+    "lint-staged": "^10.5.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": "eslint --cache --fix"
   }
 }
