--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Corrects bad casing and invalid repeating character errors on the incoming word and then returns the corrected word.",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test:jest --",
+    "test": "jest",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "test:jest": "jest",
     "test:watch": "jest --watch",
@@ -29,15 +29,17 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
-    "typescript": "4.0.5"
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "eslint": "^7.12.1",
     "husky": "^4.3.0",
     "jest": "^26.6.1",
-    "lint-staged": "^10.5.0"
+    "lint-staged": "^10.5.0",
+    "ts-jest": "^26.4.3"
   },
   "husky": {
     "hooks": {
