--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "npm": ">=15.0.1"
   },
   "dependencies": {
+    "bluebird": "^3.7.2",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
